fix(style): this ensure that the main div won't overflow the page (#9130)

--- a/app/scripts/modules/core/src/presentation/main.less
+++ b/app/scripts/modules/core/src/presentation/main.less
@@ -1240,6 +1240,7 @@ html {
     > [name='main'] {
       display: flex;
       flex-direction: column;
+      overflow: auto;
       flex: 1 1 auto;
       height: 100%;
       padding: 0;
